--- a/final.html
+++ b/final.html
@@ -1,5 +1,6 @@
 <!-- This is the completed HTML page for our final project template. -->
 <!DOCTYPE html> 
+<!DOCTYPE html> 
 <html>
     <head>
     	<html>
@@ -19,7 +20,7 @@ body {
         <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,400,300,600,700&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
         
 
-		<title>Final project template: HTML</title>
+		<title>Final project template:HTML</title>
 		<!-- Required meta tags -->
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -35,9 +36,7 @@ body {
 	<body>
 		<body>
 
-<h1 html {
-  scroll-behavior: smooth;
-} style="background-color:powderblue;">Voters across the U.S. had election deniers on their ballots for the 2022 US Midterm Races </h1>
+<h1 style="background-color:powderblue;">Voters across the U.S. had election deniers on their ballots for the 2022 US Midterm Races </h1>
 
 </body>
 
@@ -138,5 +137,7 @@ body {
 			This page was built in Github Pages by Prof. Nausheen Husain for JNL221 at Syracuse University. This page was modified by Emane Haque for her final. The two new CSS attribute on W3Schools used were style="background-color: for the article title and < small> to make the byline and graphic caption text smaller. Fonts used: Lato.</p>
 		</div>
 	</body>
-
+</html> 
+</html>
+</html>
 </html>
