--- a/final.html
+++ b/final.html
@@ -22,7 +22,7 @@
 	<body>
 	<section class="header"> 
 
-			<h2 style="background-color:powderblue;">Voters across the U.S. had election deniers on their ballots for the 2022 U.S Midterm Races </h2>
+			<h2 style="background-color:powderblue;">Voters across the U.S. had election deniers on their ballots for the 2022 U.S. Midterm Races </h2>
 			<h4 id="dek">Two years later, the 2020 presidential election is still widely contested among incumbent republican candidates, as well as those who ran during the midterm.</h4>
 				<br><small> By Emane Haque</small>
 		</section>
@@ -40,7 +40,7 @@
 		<section>
 			<h3 style="color:Tomato;"> Election denialism existed among Republicans running across all 2022 Midterm positions </h3>
 			<p> Within each political position, election deniers lay across all roles. While stances varied, data gathered by FiveThirtyEight showed that there was not any one category, those being the positions of Secretary of State, Governor, representative, senator, and attorney general, in which Republican election deniers were not running.</p>
-			<ul>
+			
 						<div id="list">
 				<h4 style="color:Tomato;">The stances recorded and collected by FiveThirtyEight:</h4></div>
 				<div>
@@ -70,12 +70,14 @@
 		</section>
 		<section>
 			<h3 style="color:Tomato;"> States with the most deniers</h3>
-			<p>Election deniers also existed more prevalently across certain red leaning or swing states. Texas had the most deniers already incumbent and those newly running. Of the republican candidates, 22 from Texas held the stance of “Fully Denied” concerning the 2022 election. After Texas, Florida, California, Pennsylvania, and Tennessee followed.</p>
+			<iframe title="2022 Midterm Representatives by each state that 'Fully Deny' the 2020 Presidential Election " aria-label="Column Chart" id="datawrapper-chart-S2RC2" src="https://datawrapper.dwcdn.net/S2RC2/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="1090" data-external="1"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();
+</script>
+			<p>Election deniers also existed more prevalently across certain red leaning or swing states. Texas had the most deniers already incumbent and those newly running. Of the republican candidates, 22 from Texas held the stance of “Fully Denied” concerning the 2022 election. After Texas, Florida, California, Pennsylvania, and Arizona followed.</p>
 			<p>Of Texas Republicans who deny the election, Governor Greg Abbot is outspoken on opposing President Biden’s presidency. Recently, Abbot demanded an investigation elections in Harris County. Published on Abbots page on Texas.Gov, he stated the allegations of election improprieties in our state's largest county may result from anything ranging from malfeasance to blatant criminal conduct. Voters in Harris County deserve to know what happened," expressing there was reason to be suspicious. This was despite no voter investigators finding anything of concern when the results were counted initially. </p>
 			<p>According to critics, such as Harris County Attorney Christian Menefee, Abbot’s demand is a targeted move to intimidate Harris county, which is democratic leaning, and his claims of Republican voter suppression are unfounded by voting officials and misusing potential basic errors to recall midterm results. Abbot is only one example of an election denier who has used unfounded questions on election validity to sway results in Republican’s favors. Other incumbent election deniers who ran for reelection include Florida Governor Ron DeSanctis and Tennessee Governor Bill Lee.</p>
 <h1 style="color:Tomato;">Media Outlets also have an influence on voter disbelief over the 2020 presidential elections. </h1>
 <p>News outlets and social media also give election deniers a platform to express their views, and depending on the outlet, fail to fact check.</p>
-	<p> Wong also shed light on why election deniers are so prevalent. “People are heavily influenced by the media, specifically Fox News, and other right wing news outlets. They were validating the claims made by Trump and questioning whether the election was real opened the conversation for that to be seen as a valid argument,” she said.</p> 
+<p> Wong also shed light on why election deniers are so prevalent. “People are heavily influenced by the media, specifically Fox News, and other right wing news outlets. They were validating the claims made by Trump and questioning whether the election was real opened the conversation for that to be seen as a valid argument,” she said.</p> 
 <h3 style="color:Tomato;">The damaging effects of election denialism on democracy</h3>
 			<p>Beyond just affecting the 2020 Presidential election and the 2022 Midterm elections, denialism can set a precedent of allowing for fair and free election to come under fire without reason. While the process of voting is imperfect, as BIPOC, low-income citizens, and the elderly face barriers to voting, political figures calling to revalue valid election results undermines the strength of the American people’s vote. When political officials, biased media sources and ill-informed citizens believe in unfounded claims, this creates mistrust and calls into question the safety of election protection.</p>
 			<p>According to the Cybersecurity & Infrastructure Security Agency (CISA), some misconceptions on voting that arise are hackers are able to change election results, people can impersonate and violate mail-in/absentee, and votes can be cast under names of the deceased. Election deniers play an active role in fueling these misguided notions. In reality, the CISA asserts the voter technology vulnerabilities are managed by voting system standards and testing, safeguards and laws exist to prevent voter impersonation, and redundancy measures are in place no matter how votes are cast. The resulting discord over election deniers creates confusion that the people will have to sift through, which will impact their voting decisions. Rather than publicly claim fraudulent elections are taking place or insinuate the voting system is corrupt, politicians and candidates should be transparent on the process to voters, make for a stronger system, and call for recounts when proven to be necessary. </p>
